infra/openshift-manifests/ai-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-demo
  labels:
    bindings.knative.dev/include: "true"
